_archive/content-services/5.2/glossary/glossary_o.md
---
author: [Alfresco Documentation, Alfresco Documentation]
source: 
audience: 
category: Glossary
option: glossary
---

# O

Glossary terms starting with the letter O.

[A](glossary_a.md) \| [B](glossary_b.md) \| [C](glossary_c.md) \| [D](glossary_d.md) \| [E](glossary_e.md) \| [F](glossary_f.md) \| [G](glossary_g.md) \| [H](glossary_h.md) \| [I](glossary_i.md) \| [J](glossary_j.md) \| [K](glossary_k.md) \| [L](glossary_l.md) \| [M](glossary_m.md) \| [N](glossary_n.md) \| [O](glossary_o.md) \| [P](glossary_p.md) \| [Q](glossary_q.md) \| [R](glossary_r.md) \| [S](glossary_s.md) \| [T](glossary_t.md) \| [U](glossary_u.md) \| [V](glossary_v.md) \| [W](glossary_w.md) \| [X](glossary_x.md) \| [Y](glossary_y.md) \| [Z](glossary_z.md)

-   **OASIS**

    The Organization for the Advancement of Structured Information Standards \(OASIS\) is an organization that drives the development, convergence, and adoption of information and web service standards. For more information, see [https://www.oasis-open.org/](https://www.oasis-open.org/).

-   **OLAP \(OnLine Analytical Processing\) cube**

    An OLAP cube is a database that is optimised for data warehouse and analytical processing applications. OLAP cubes are used in Alfresco Analytics.

-   **Open JDK**

    OpenJDK \(Open Java Development Kit\) is an open-source implementation of the Java SE \(Java Platform, Standard Edition\) specifications.

-   **OpenLDAP**

    OpenLDAP is an open-source software implementation of LDAP \(Lightweight Directory Access Protocol\). For more information, see [http://www.openldap.org](http://www.openldap.org).

-   **OpenSearch**

    OpenSearch is a collection of simple formats for the sharing of search results. For more information, see [http://www.opensearch.org/Home](http://www.opensearch.org/Home).


